tests/baselines/reference/parserAdditiveExpression1.errors.txt
parserAdditiveExpression1.ts(1,1): error TS2304: Cannot find name 'm'.
parserAdditiveExpression1.ts(1,11): error TS2304: Cannot find name 'm'.


==== parserAdditiveExpression1.ts (2 errors) ====
    m.index+1+m[0].length;
    ~
!!! error TS2304: Cannot find name 'm'.
              ~
!!! error TS2304: Cannot find name 'm'.